# RL-TRADE

./: .gitignore  GUIDE_UTILISATION.md  INSTALLATION_MANUELLE.md  install_requirements.sh  pyproject.toml  render.yaml  requirements.txt  trading_bot_flask.py  twelve_data_config.py
rl_trading/data/forex/: __init__.py  _common.py  _loading.py  twelve_data_source.py
rl_trading/environments/forex/: _envs.py  _wrappers.py
templates/: trading_dashboard.html
